# ur_tutorials

ur_tutorials/my_robot_cell/my_robot_cell_control/: CMakeLists.txt  package.xml
ur_tutorials/my_robot_cell/my_robot_cell_control/launch/: rsp.launch.py  start_robot.launch.py  test_find_package_share.py
ur_tutorials/my_robot_cell/my_robot_cell_control/test/: simple_trajectory.yaml
ur_tutorials/my_robot_cell/my_robot_cell_control/urdf/: mein_roboter_urtutorials.urdf  my_robot_cell_controlled.urdf.xacro  robot_controlled.urdf
ur_tutorials/my_robot_cell/my_robot_cell_description/urdf/: my_robot_cell_test.urdf
